Global animations jump fix, tags input style fix, minor error page styling

--- a/app/components/navbar/_navbar.scss
+++ b/app/components/navbar/_navbar.scss
@@ -183,6 +183,18 @@ aside {
           }
         }
 
+        input[type="text"],
+        input[type="password"] {
+          padding: 5px;
+          font: inherit;
+          font-size: 12px;
+          border: none;
+          outline: none;
+          box-shadow: none;
+          margin-bottom: 20px;
+          width: 100%;
+        }
+
         h2 {
           margin-top: 0px;
         }
