--- a/app/pages/admin/index/_admin-page.scss
+++ b/app/pages/admin/index/_admin-page.scss
@@ -21,18 +21,26 @@
       &.tabs-navigation {
         li {
           display: inline-block;
-          padding: ($content-gutter/2) $content-gutter;
-          cursor: pointer;
-          background: #ddd;
-          margin-right: 3px;
-          font-size: 12px;
-          font-weight: 700;
-          text-transform: uppercase;
+          
+          a {
+            display: inline-block;
+            padding: ($content-gutter/2) $content-gutter;
+            cursor: pointer;
+            background: #ddd;
+            color: #777;
+            margin-right: 3px;
+            font-size: 12px;
+            font-weight: 700;
+            text-transform: uppercase;
+            text-decoration: none;
+          }
 
           &.active {
-            background: $primary-color;
-            border-color: $primary-color;
-            color: #fff;
+            a {
+              background: $primary-color;
+              border-color: $primary-color;
+              color: #fff;
+            }
           }
         }
       }
