--- a/app/pages/index/index/_index-index-page.scss
+++ b/app/pages/index/index/_index-index-page.scss
@@ -17,6 +17,23 @@
     	margin-bottom: 10px;
     	position: relative;
 
+        .select2-search-field {
+            input {
+                &,
+                &:focus,
+                &.active,
+                &.select2-focused,
+                &.select2-active {
+                    background: none !important;
+                    background-image: none !important;
+                    background-color: transparent !important;
+                    border: none !important;
+                    box-shadow: none !important;    
+                    width: auto !important;
+                }
+            }
+        }
+
     	.select2-container {
     		width: 100% !important;
     	}
@@ -48,6 +65,7 @@
 	    		background: none !important;
 	    		border: none !important;
 	    		box-shadow: none !important;
+                width: auto !important;
 	    	}
 
 	    	.select2-search-choice {
