--- a/app/styles/_animations.scss
+++ b/app/styles/_animations.scss
@@ -11,6 +11,7 @@
          position: absolute;
          top: 0;
          left: 0;
+         right: 0;
          display: block;
        }
 
